--- a/HalamanUtama/Index.css
+++ b/HalamanUtama/Index.css
@@ -333,9 +333,9 @@ transition: top 1s ;
 
 #cv-background { 
 position: absolute;
-margin-top: -10px;
+margin-top: -8px;
 width: 72.5px;  
-height: 40px; 
+height: 38px; 
 border-radius: 5px;
 background-color: var(--cyan);
 right: 20PX; 
@@ -844,7 +844,7 @@ animation-fill-mode: forwards;
 /*====================================== Container Photo ====================================*/
 .container-photo {
 position: absolute;
-top: 740px;
+top: 780px;
 right: 220px;
 background-color: var(--black2);
 width: 320px;
@@ -852,12 +852,20 @@ height: 320px;
 
 }
 
-@media (max-width: 1016px){
+@media (max-width: 1164px){
 .container-photo {
  position: absolute;
- top: 850px;
+ top: 900px;
 }
 }
+
+@media (max-width: 1002px){
+  .container-photo {
+   position: absolute;
+   top: 1000px;
+  }
+  }
+
 
 .photo {
 width: 90%; 
@@ -1120,9 +1128,6 @@ color: var(--cyan);
    }
 
 
-
-
-
    /*====================================== Search container ====================================*/
    .search-container {
      position: relative;
@@ -1206,10 +1211,11 @@ color: var(--cyan);
 
    #cv-background { 
      position: absolute;
-     margin-top: 10PX;
-     width: 60.60px;  
-     height: 20px; 
-     background-color: var(--white);
+     border-radius: 5px;
+     margin-top: -8PX;
+     width: 68.5px;  
+     height: 38px; 
+     background-color: var(--cyan);
      right: 20PX; 
      z-index: 1;
    }
@@ -1305,22 +1311,14 @@ overflow-x: hidden;
 
 /*====================================== Container Photo ====================================*/
 .container-photo {
-position: absolute;
-top: 730px;
-right: 30px;
-background-color: var(--black2);
-width: 320px;
-height: 320px; 
-
+  position: absolute;
+  top: 1200px;
+  left: 30%;
+  background-color: var(--black2);
+  width: 320px;
+  height: 320px;
 }
 
-@media (max-width: 624px){
-.container-photo {
- position: absolute;
- top: 800px;
-
-}
-}
 
 
 
@@ -1328,18 +1326,25 @@ height: 320px;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 .about-container {
-position: absolute;
-right: 350px;
-margin-left: 5px;
-background-color: var(--black2);
-text-align: justify;  
-max-width: 50%; 
-min-width: 10%;
-margin-top: 180px; 
-padding: 20px;
-border-radius: 15px;
-animation: slideUpFadeIn 1s ease-out; 
-z-index: 0;
+  position: absolute;
+  top: 600px; /* Menempatkan elemen di tengah secara vertikal */
+  left: 5px;
+  width: 700px;
+  margin-left: 5px;
+  padding-right: 200px;
+  background-color: var(--black2);
+  text-align: justify;
+  max-width: 700px;
+  min-width: 200px;
+  padding: 20px;
+  border-radius: 15px;
+  animation: slideUpFadeIn 1s ease-out;
+  z-index: 0;
+}
+
+.container-carousel {
+  position: absolute;
+  top: 2000px; 
 }
 
  }
